[package]
name = "wave_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
bitflags = "2.5.0"
bytemuck = "1.15.0"
clap = { version = "4.5.4", features = ["derive"] }
crossbeam-channel = "0.5.12"
egui = "0.27.2"
egui-wgpu = "0.27.2"
egui-winit = "0.27.2"
encase = { version = "0.10.0", features = ["nalgebra"] }
hound = "3.5.1"
image = "0.25.1"
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
num-traits = "0.2.19"
pollster = { version = "0.3.0", features = ["macro"] }
rubato = "0.15.0"
serde = { version = "1.0.201", features = ["derive"] }
soon = { git = "https://github.com/connorslade/misc" }
toml = "0.8.12"
wgpu = "0.19.4"
winit = "0.29.15"
