[package]
name = "wave_sim_gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
bytemuck = "1.15.0"
egui = "0.27.2"
egui-wgpu = "0.27.2"
egui-winit = "0.27.2"
encase = "0.8.0"
image = "0.25.1"
nd_vec = "0.4.0"
pollster = "0.3.0"
soon = { git = "https://github.com/connorslade/misc" }
spin_sleep_util = "0.1.1"
wgpu = "0.19.4"
winit = "0.29.15"
